@@ -3,6 +3,8 @@ Changes in 3.1.7
 * UPD: Spotlight: enhance behaviour for long running queries, client
        will now show "progress wheel" while waiting for first results.
 * FIX: netatalk: fix a crash on Solaris when registering with mDNS
+* FIX: netatalk: SIGHUP would kill the process instead of being resent
+       to the other Netatalk processes, bug #579
 
 Changes in 3.1.6
 ================
